--- a/templates/expon/expinprogress.html
+++ b/templates/expon/expinprogress.html
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<div class="sidebar col-md-3">
+<div class="sidebar col-md-3  hidden-xs hidden-sm">
 
     <div class="account-info">
         <h4>账户信息</h4>
