--- a/templates/treatments/treatmentlist.html
+++ b/templates/treatments/treatmentlist.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <div class="well col-md-3 tips">
+    <div class="well col-md-3 tips hidden-xs hidden-sm">
         <p>提示:</p>
         <ul>
             <li>共{{ len(treatments) }}个组件，点击查看详情。</li>
