--- a/templates/self.html
+++ b/templates/self.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-5">
+<div class="col-md-5 hidden-xs hidden-sm">
     <div class="well col-md-offset-2 col-md-8 tips">
         <p>提示:</p>
         <ul>
