--- a/components/thandler/trainprivatesecondsealed.html
+++ b/components/thandler/trainprivatesecondsealed.html
@@ -56,8 +56,11 @@
                 别人出价高于120，你出100和120是无区别的，收益都为0。别人出价在100到120之间，比如110，你出价100收益为0，你出价120收益为-10，
                 还不如出100，也就是说出价大于100也会降低收益。</p>
             </div>
-            <li>所有竞拍者对拍卖物的估价并都服从{{ settings['minQ'] }}-{{ settings['maxQ'] }}的均匀分布。竞拍者估价的
-                相互独立，且各竞拍者只知道自己的估价，不知道其他人的估价的确切值，但竞拍者知道所有人的估价服从相同的均匀分布。</li>
+            <li>所有竞拍者对拍卖物的估价并都服从{{ settings['minQ'] }}-{{ settings['maxQ'] }}的均匀分布。竞拍者的估价相互独立，且为
+                <a href="javascript:void(0)" onclick="$('#tip1').toggle()">私人价值</a>。</li>
+            <div id="tip1" style="display: none; font-size: 18px;">
+                各竞拍者只知道自己的估价，不知道其他人的估价的确切值，但竞拍者知道所有人的估价服从相同的均匀分布。
+            </div>
             <li>如果你的报价是所有报价中的最高价，而所有报价中的第二高价为b，那么你将支付b并获得物品，你的收益为q-b；否则，你的收益为0。</li>
             <li>请在下面的输入框写上您对物品的报价，并进行提交。</li>
         </ul>
