--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,10 +15,10 @@
     margin-top: 1em; // TODO: do not hardcode to center align
 }
 
-input {
+/*input {
     margin-bottom: 2em;
 }
-
+*/
 /*==================================================
  * Effect 7
  * ===============================================*/
