--- a/templates/self.html
+++ b/templates/self.html
@@ -25,7 +25,7 @@
                 <span class="badge" style="background-color: #337AB7;">&nbsp;{{ len(exp_activated) }}&nbsp;</span>
             </h3>
         </div>
-        <div class="list-group">
+        <div class="col-md-offset-1 list-group">
             {% for exp in exp_activated %}
             <a class="list-group-item col-md-7" href="/exp/{{ exp['exp_id'] }}">{{ exp['exp_title'] }}</a>
             {% end %}
@@ -41,7 +41,7 @@
                 我创建的&nbsp;
                 <span class="badge" style="background-color: #337AB7;">&nbsp;{{ len(exp_established) }}&nbsp;</span></h3>
         </div>
-        <div class="list-group">
+        <div class="col-md-offset-1 list-group">
             {% for exp in exp_established %}
             <a class="list-group-item col-md-7" href="/exp/{{ exp['exp_id'] }}">{{ exp['exp_title'] }}</a>
             {% end %}
@@ -58,7 +58,7 @@
                 <span class="badge" style="background-color: #337AB7;">&nbsp;{{ len(exp_participated) }}&nbsp;</span>
             </h3>
         </div>
-        <div class="list-group">
+        <div class="col-md-offset-1 list-group">
             {% for exp in exp_participated %}
             <a class="list-group-item col-md-7" href="/exp/{{ exp['exp_id'] }}">{{ exp['exp_title'] }}</a>
             {% end %}
